--- a/globalinfocloud_task/android/app/src/main/AndroidManifest.xml
+++ b/globalinfocloud_task/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.globalinfocloud_task">
+   
+
+
     <application
         android:label="globalinfocloud_task"
         android:name="${applicationName}"
