--- a/globalinfocloud_task/pubspec.yaml
+++ b/globalinfocloud_task/pubspec.yaml
@@ -35,6 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  http: ^1.2.2
+  firebase_auth: ^5.1.4
+  firebase_core: ^3.3.0
+  cloud_firestore: ^5.2.1
+  firebase_storage: any
+  provider: ^6.1.2
+  image_picker: ^1.1.2
+  google_ml_kit: ^0.18.0
+  country_picker: ^2.0.26
+  firebase_app_check: ^0.3.0+4
+  intl: ^0.19.0
+  flutter_easyloading: ^3.0.5
+  uuid: ^4.4.2
+  flutter_svg: ^2.0.10+1
+
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +100,12 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+  fonts:
+    - family: Brand-Bold
+      fonts:
+        - asset: assets/fonts/GemunuLibre-Bold.ttf
+    - family: Semi-Bold
+      fonts:
+        - asset: assets/fonts/GemunuLibre-SemiBold.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
